package com.crownrace.msg;

enum NET_CMD{
	LOGIN_REQ_CMD=1;
	LOGIN_ACK_CMD=2;
	HEARTBEAT_REQ_CMD=3;
	HEARTBEAT_ACK_CMD=4;
	LEAVE_GAME_NTF_CMD=5;
	ALL_PLAYER_DATA_NTF_CMD=6;
	PLAYER_ROUND_END_REQ_CMD=7;
	PLAYER_ROLL_DICE_NTF_CMD=8;
	DICE_SYNC_NTF_CMD=9;
	ROLL_DICE_OVER_NTF=10;
}

message packet{
	required NET_CMD cmd=1;
	required bytes payload=2;
}